change product list design

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,3 +1,7 @@
-<div class="product-tile" *ngFor="let product of products">
-    {{ product.name }}
+<div class="product-list">
+    <div class="product-tile" *ngFor="let product of products">
+        <h3>{{ product.name }}</h3>
+        <img [src]="product.imageUrl" [alt]="product.name">
+        <button>BUY</button>
+    </div>
 </div>
