hooks demo draft (exkl. onChange and onDestroy)

--- a/src/app/product-list/product-list.component.scss
+++ b/src/app/product-list/product-list.component.scss
@@ -22,3 +22,12 @@
         }
     }
 }
+
+.console-logs {
+    height: 300px;
+    width: 300px;
+    border: 1px gray solid;
+    margin: 20px;
+    padding: 20px;
+    overflow: auto;
+}
