--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -2,6 +2,11 @@
     <div class="product-tile" *ngFor="let product of products">
         <h3>{{ product.name }}</h3>
         <img [src]="product.imageUrl" [alt]="product.name">
-        <button>BUY</button>
+
+        <button (click)="buyFruit($event.target)">BUY</button>
+    </div>
+
+    <div class="console-logs">
+        <h3 *ngFor="let log of logs">{{ log }}</h3>
     </div>
 </div>
