--- a/src/app/product-list/product-list.component.scss
+++ b/src/app/product-list/product-list.component.scss
@@ -3,9 +3,9 @@
     display: flex;
     justify-content: center;
 
-    .product-tile {
+    .product-title {
         text-align: center;
-        height: 300px;
+        height: 370px;
         width: 300px;
         border: 1px gray solid;
         margin: 20px;
@@ -24,10 +24,22 @@
 }
 
 .console-logs {
-    height: 300px;
+    height: 370px;
     width: 300px;
     border: 1px gray solid;
     margin: 20px;
     padding: 20px;
     overflow: auto;
 }
+
+.input-field {
+    margin: 20px;
+}
+
+.button-group {
+    display: flex;
+ }
+ 
+ .button-group button {
+    margin: 5px;
+ }
