--- a/src/app/product-list/product-list.component.scss
+++ b/src/app/product-list/product-list.component.scss
@@ -30,6 +30,11 @@
     margin: 20px;
     padding: 20px;
     overflow: auto;
+    color: brown;
+}
+
+.title {
+    color: black;
 }
 
 .input-field {
