--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="left">
+    <router-outlet></router-outlet>
+</div>
+<div class="right">
+    <app-basket></app-basket>
+</div>
