--- a/src/app/product-list/product-list.component.scss
+++ b/src/app/product-list/product-list.component.scss
@@ -1,6 +1,7 @@
 .product-list {
     padding-top: 40px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 
     .product-tile {
