--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -2,9 +2,15 @@
     <div class="product-tile" *ngFor="let product of products">
         <!-- TODO add routerLink -->
         <div class="clickable-area">
-            <img [src]="product.imageUrl" [alt]="product.name">
-            <h3>{{ product.name }}</h3>
+            <a [routerLink]="['/product', product.id]">
+                <img [src]="product.imageUrl" [alt]="product.name">
+                <h3>{{ product.name }}</h3>
+            </a>
         </div>
-        <!-- TODO add AddToBasket -->
+        <!-- Task 2: start -->
+        <app-add-to-basket
+            [basketProduct]="product">
+        </app-add-to-basket>
+        <!--Task 2: end-->
     </div>
 </div>
