--- a/src/app/basket/basket.component.html
+++ b/src/app/basket/basket.component.html
@@ -11,8 +11,10 @@
         <span>Total</span>
         <span>{{ calculateTotalQuantity() }}</span>
     </div>
+    <!-- Task 5.4: start -->
     <div class="item-line">
         <span>Price</span>
         <span>{{ calculateTotalPrice() }}$</span>
     </div>
+    <!-- Task 5.4: end -->
 </div>
