--- a/src/app/basket/basket.component.html
+++ b/src/app/basket/basket.component.html
@@ -1,5 +1,5 @@
 <h3>Basket</h3>
-<p *ngIf="!basketItems.length">You basket is empty.</p>
+<p *ngIf="!basketItems.length">Your basket is empty.</p>
 <div *ngFor="let item of basketItems">
     <div class="item-line">
         <span>{{ item.product.name }}</span>
