--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -8,8 +8,8 @@
  
             <!-- Task 4.1: end -->
         </div>
-        <!-- Task 2: start -->
-
-        <!--Task 2: end-->
+        <app-add-to-basket
+            [basketProduct]="product">
+        </app-add-to-basket>
     </div>
 </div>
